feat: 重构为甜品店

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
     "type-check": "vue-tsc --noEmit",
-    "deploy": "sh scripts/deploy.sh"
+    "deploy": "node scripts/deploy.js"
   },
   "keywords": [],
   "author": "",
